# embedding_visualization

./: load_data.py  pca_embeddings.py  pcad_embeddings.npy  pyproject.toml  titles.npy  visualize_pca.ipynb
data/: embeddings.npy  metadata.csv
